<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkest"
        android:padding="20dp">

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/expenses_tracker_icon"
                app:civ_border_color="@color/lightest"
                app:civ_border_width="2dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/ivUserImg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_FLname"
                    android:textColor="@color/lightest"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/lblWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/lightest"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerLayout"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_lighter"
            android:padding="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/totExp"
                android:textColor="@color/darkest"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="321313132132133213231324324"
                android:textColor="@color/darkest"
                android:textSize="30sp"
                android:textStyle="bold"
                android:lines="1"
                />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_darkest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp"
                >

                <LinearLayout
                    android:id="@+id/linearRemBud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/lblRemBud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remBud"
                        android:textColor="@color/lighter"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/RemainingBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sampRemBud"
                        android:textColor="@color/lightest"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearTotSav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/totSav"
                        android:textColor="@color/lighter"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tvTotalSavings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sampTotSav"
                        android:textSize="17sp"
                        android:textColor="@color/lightest"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/action_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_layout"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lighter"
                android:src="@drawable/add"
                app:borderWidth="0dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lightest"
                android:src="@drawable/category"
                app:borderWidth="0dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lightest"
                android:src="@drawable/budget"
                app:borderWidth="0dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnReports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lightest"
                android:src="@drawable/chart"
                app:borderWidth="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_history_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_layout"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblActHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Expenses History"
                android:textColor="@color/lightest"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/actitvity_history_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp">

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
