<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkest"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/lblTvReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            android:textAlignment="center"
            android:textColor="@color/lightest"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layoutDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTvReports"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/darker"
                android:text="Start Date"
                android:textAlignment="center"
                android:textColor="@color/lighter"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TO"
                android:textAlignment="center"
                android:textColor="@color/lightest"
                android:textSize="10sp" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/darker"
                android:text="End Date"
                android:textAlignment="center"
                android:textColor="@color/lighter"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_below="@id/layoutDates"
            android:id="@+id/chart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_darker"
            android:padding="10dp"
            >
        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/overallReportsChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_below="@id/chart_layout"
            android:id="@+id/amount_summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <LinearLayout
                android:background="@drawable/rounded_darker"
                android:id="@+id/linearBud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:id="@+id/lblBud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Budget"
                    android:textColor="@color/lightest"
                    android:textSize="10sp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/totalBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sampRemBud"
                    android:textColor="@color/lighter"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/rounded_darker"
                android:id="@+id/linearTotExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Expenses"
                    android:textColor="@color/lightest"
                    android:textSize="10sp" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvTotalExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sampTotSav"
                    android:textSize="15sp"
                    android:textColor="@color/accent1"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_below="@id/amount_summary_layout"
            android:layout_marginTop="25dp"
            android:id="@+id/lblExpensesCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Expenses Categories"
            android:textSize="15sp"
            android:textColor="@color/lightest"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblExpensesCategories"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/CategoryExpenseListLayout"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@drawable/rounded_darker"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:id="@+id/lvlTvNoCategories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="No expenses in this date"
                    android:gravity="center"
                    android:textColor="@color/lighter"
                    android:textSize="10sp"
                    android:visibility="visible"
                    />
            </LinearLayout>
        </HorizontalScrollView>

    </RelativeLayout>
</ScrollView>